[package]
name = "axum-session-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum_database_sessions = { version = "0.2.3", features = ["rustls"] }
axum = "0.4.8"
tokio = "1.17.0"
rustls = "0.20.4"
tower-cookies = "0.5.1"
tracing = "0.1.32"